# blink

./: .gitignore  CLAUDE.md
.github/workflows/: ci.yml  windows-build.yml
app/: .gitignore  flutter_rust_bridge.yaml  pubspec.yaml
app/lib/: main.dart
app/macos/Runner.xcodeproj/: project.pbxproj
app/test/: path_utils_test.dart  widget_test.dart
app/test/models/: tree_node_test.dart
app/test/theme/: app_theme_test.dart  syntax_theme_test.dart
app/test/view_models/: project_view_model_test.dart
app/test/views/: editor_mode_bar_test.dart
core/: Cargo.toml
core/crates/core_api/: Cargo.toml
core/crates/core_api/src/: dart_api.rs  frb_generated.rs  lib.rs
core/crates/core_api/src/snapshots/: core_api__tests__highlight_range_js_snapshot.snap  core_api__tests__highlight_range_rust_snapshot.snap
core/crates/core_fs/: Cargo.toml
core/crates/core_git/: Cargo.toml
core/crates/core_highlight/: Cargo.toml
core/crates/core_highlight/src/: lib.rs
core/crates/core_highlight/src/snapshots/: core_highlight__tests__tokenize_javascript_snapshot.snap  core_highlight__tests__tokenize_python_snapshot.snap  core_highlight__tests__tokenize_rust_snapshot.snap
core/crates/core_types/: Cargo.toml
mac-ui/Blink/: Blink-Bridging-Header.h  BlinkApp.swift  ContentView.swift
mac-ui/Blink.xcodeproj/: project.pbxproj
mac-ui/Blink/Theme/: SyntaxTheme.swift
mac-ui/Blink/ViewModels/: ProjectViewModel.swift
mac-ui/Blink/Views/: BlameGutterView.swift  (+2 more)
scripts/: build_flutter.sh  build_rust.sh  deploy_app.sh  gen_frb.sh  gen_uniffi.sh
scripts/archive/: gen_uniffi.sh
(+23 files in other folders)
