[package]
name = "core_highlight"
version = "0.1.0"
edition = "2021"

[dependencies]
core_types = { path = "../core_types" }
tree-sitter = "0.25"
tree-sitter-css = "0.25.0"
tree-sitter-dart = "0.0.4"
tree-sitter-html = "0.23.2"
tree-sitter-javascript = "0.23"
tree-sitter-json = "0.24.8"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.0"
tree-sitter-swift = "0.6.0"
tree-sitter-typescript = "0.23"
tree-sitter-yaml = "0.7.2"
